final edits